# github_submodule_hook

./: .gitignore  Cargo.toml  README.md  config_example.json  index.html
src/: cli.rs  cli2.rs  config.rs  constants.rs  global_state.rs  main.rs  submodule.rs  token.rs  users.rs
src/access/: mod.rs  permissions.rs  token.rs  users.rs
src/hooks/: github.rs  gitlab.rs  hooks.rs  mod.rs
src/server/: server.rs  types.rs
