[package]
name = "github_submodule_hook"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build]
# rustflags = ["-C", "target-feature=+crt-static"]
# target = "x86_64-unknown-linux-gnu"

[dependencies]
rocket = "0.5.0-rc.2"
# rocket = "0.4.11"
# rocket_contrib = "0.4.11"
clap = { version = "4.0.18", features = ["derive"] }
serde = "1.0.147"
tokio = "1.21.2"
anyhow = "1.0.66"
octorust = "0.1.37"
serde_json = "1.0"
base64 = "0.13.1"
sha2 = "0.10.6"
home = "0.5.4"
clap_complete = "4.0.3"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]